# TG-Bot

./: .gitignore  ARCHITECTURE.md  README.md  manifest.json  package-lock.json  package.json  playwright.config.js
LLM_Backend/: README.md
LLM_Backend/llm_backend/: base.py  (+5 more)
LLM_Frontend/: README.md  pyproject.toml
LLM_Frontend/phantom_llm/: __init__.py  daemon.py  manager.py  model_discovery.py  prompt_pool.py  router.py  session.py  sharedmem.py  telegram_commands.py  version.py
LLM_Frontend/phantom_llm/tools/: __init__.py  file.py  orchestrator.py  peer.py
docs/: README.md  module-architecture.md
modules/: README.md
modules/infiniproxy/: ELEVENLABS_WEBSOCKET_TESTING.md  GITHUB_PUSH_SUMMARY.md  QUICK_START.md  README.md  proxy_server.py  pyproject.toml  test_agno_proxy.py  test_all_endpoints.py  test_elevenlabs_stt_websocket.py  test_elevenlabs_tts_websocket.py  test_interceptor_integration.py  test_official_clients.py  test_wrapper_clients.py
modules/infiniproxy/phantom_infiniproxy/: __init__.py  cli.py  version.py
modules/phantom-console/: README.md  pyproject.toml
modules/phantom-console/phantom_console/: __init__.py  cli.py  console.html  event_log.py  index.html  server.py  sw.js  tasks.py  version.py
modules/phantom-console/phantom_console/css/: console.css
modules/phantom-console/phantom_console/js/: app.js  askq.js  composer.js  events.js  hub.js  render.js  renderer_engine.js  settings.js  utils.js
modules/phantom-console/phantom_console/twa/: build-apk.sh  twa-manifest.template.json
modules/phantom-network/: README.md  pyproject.toml
modules/phantom-network/phantom_network/: __init__.py  addressbook.py  cli.py  daemon.py  version.py
modules/phantom-network/scripts/: netns-direct.sh
tests/: console.spec.js
(+70 files in other folders)
