[project]
name = "phantom-infiniproxy"
version = "0.1.0"
description = "OpenAI-compatible to Anthropic API proxy service"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "requests==2.32.5",
  "python-multipart==0.0.20",
  "python-dotenv==1.0.0",
]

[project.scripts]
phantom-infiniproxy = "phantom_infiniproxy.cli:main"

[tool.setuptools]
packages = ["phantom_infiniproxy"]
