[project]
name = "phantom-network"
version = "0.1.0"
description = "Phantom network contact book and Cloudflare domain pool"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9",
]

[project.scripts]
phantom-network = "phantom_network.cli:main"

[tool.setuptools]
packages = ["phantom_network"]
